# jsonschemabench

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
docker/: Dockerfile  build-and-run.sh  entrypoint.sh
src/jsonbench/core/: engine.py  utils.py
src/jsonbench/engines/: __init__.py  pse.py
src/jsonbench/tests/: all.py
src/jsonbench/tests/configs/: pse.yaml
src/maskbench/: README.md  __main__.py  runner.py
src/maskbench/scripts/: maskbench_results.py  run_maskbench.py
src/maskbench/src/: engine.py  json_schema_to_grammar.py  pse_engine.py  runner.py  xgr_engine.py
