[project]
name = "structure-benchmarks"
version = "0.1.0"
description = "Benchmarks for JSON Schema Structure Generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers",
    "huggingface_hub",
    "torch",
    "llama_cpp_python==0.3.8",
    "llguidance==0.7.10",
    "outlines_core==0.2.3",
    "xgrammar==0.1.17",
    "pse>=4.0.0",
    "datasets",
    "jsonschema",
    "matplotlib",
    "numpy",
    "omegaconf",
    "prettytable",
    "protobuf",
    "requests",
    "stopit",
    "tiktoken",
    "tokenizers",
    "tqdm",
    "dacite",
    "google-generativeai"
]

[tool.setuptools.packages.find]
where = ["src"]
