[project]
name = "structure-benchmarks"
version = "0.1.0"
description = "Benchmarks for JSON Schema Structure Generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers",
    "huggingface_hub",
    "torch",
    "llama_cpp_python",
    "llguidance",
    "outlines_core",
    "xgrammar",
    "pse",
    "datasets",
    "jsonschema",
    "matplotlib",
    "numpy",
    "omegaconf",
    "prettytable",
    "protobuf",
    "requests",
    "stopit",
    "tiktoken",
    "tokenizers",
    "tqdm",
    "dacite",
    "google-generativeai"
]
